add: working on adding questions and few fixes
